[gd_scene load_steps=121 format=2]

[ext_resource path="res://gfx/enemies/holizard/idle/0015.png" type="Texture" id=1]
[ext_resource path="res://gfx/enemies/holizard/idle/0023.png" type="Texture" id=2]
[ext_resource path="res://gfx/enemies/holizard/idle/0024.png" type="Texture" id=3]
[ext_resource path="res://gfx/enemies/holizard/idle/0025.png" type="Texture" id=4]
[ext_resource path="res://gfx/enemies/holizard/idle/0026.png" type="Texture" id=5]
[ext_resource path="res://gfx/enemies/holizard/idle/0027.png" type="Texture" id=6]
[ext_resource path="res://gfx/enemies/holizard/idle/0028.png" type="Texture" id=7]
[ext_resource path="res://gfx/enemies/holizard/idle/0029.png" type="Texture" id=8]
[ext_resource path="res://gfx/enemies/holizard/idle/0030.png" type="Texture" id=9]
[ext_resource path="res://gfx/enemies/holizard/idle/0031.png" type="Texture" id=10]
[ext_resource path="res://gfx/enemies/holizard/idle/0033.png" type="Texture" id=11]
[ext_resource path="res://gfx/enemies/holizard/idle/0032.png" type="Texture" id=12]
[ext_resource path="res://gfx/enemies/holizard/attack/0011.png" type="Texture" id=13]
[ext_resource path="res://gfx/enemies/holizard/attack/0012.png" type="Texture" id=14]
[ext_resource path="res://gfx/enemies/holizard/attack/0013.png" type="Texture" id=15]
[ext_resource path="res://gfx/enemies/holizard/attack/0014.png" type="Texture" id=16]
[ext_resource path="res://gfx/enemies/holizard/attack/0015.png" type="Texture" id=17]
[ext_resource path="res://gfx/enemies/holizard/attack/0016.png" type="Texture" id=18]
[ext_resource path="res://gfx/enemies/holizard/attack/0017.png" type="Texture" id=19]
[ext_resource path="res://gfx/enemies/holizard/attack/0018.png" type="Texture" id=20]
[ext_resource path="res://gfx/enemies/holizard/attack/0019.png" type="Texture" id=21]
[ext_resource path="res://gfx/enemies/holizard/attack/0020.png" type="Texture" id=22]
[ext_resource path="res://gfx/enemies/holizard/attack/0021.png" type="Texture" id=23]
[ext_resource path="res://gfx/enemies/holizard/attack/0022.png" type="Texture" id=24]
[ext_resource path="res://gfx/enemies/holizard/attack/0023.png" type="Texture" id=25]
[ext_resource path="res://gfx/enemies/holizard/attack/0024.png" type="Texture" id=26]
[ext_resource path="res://gfx/enemies/holizard/attack/0025.png" type="Texture" id=27]
[ext_resource path="res://gfx/enemies/holizard/attack/0004.png" type="Texture" id=28]
[ext_resource path="res://gfx/enemies/holizard/idle/0016.png" type="Texture" id=29]
[ext_resource path="res://gfx/enemies/holizard/idle/0017.png" type="Texture" id=30]
[ext_resource path="res://gfx/enemies/holizard/idle/0018.png" type="Texture" id=31]
[ext_resource path="res://gfx/enemies/holizard/idle/0019.png" type="Texture" id=32]
[ext_resource path="res://gfx/enemies/holizard/idle/0020.png" type="Texture" id=33]
[ext_resource path="res://gfx/enemies/holizard/idle/0022.png" type="Texture" id=34]
[ext_resource path="res://gfx/enemies/holizard/idle/0021.png" type="Texture" id=35]
[ext_resource path="res://gfx/enemies/holizard/walk/0003.png" type="Texture" id=36]
[ext_resource path="res://gfx/enemies/holizard/walk/0004.png" type="Texture" id=37]
[ext_resource path="res://gfx/enemies/holizard/walk/0005.png" type="Texture" id=38]
[ext_resource path="res://gfx/enemies/holizard/walk/0006.png" type="Texture" id=39]
[ext_resource path="res://gfx/enemies/holizard/walk/0007.png" type="Texture" id=40]
[ext_resource path="res://gfx/enemies/holizard/walk/0008.png" type="Texture" id=41]
[ext_resource path="res://gfx/enemies/holizard/walk/0009.png" type="Texture" id=42]
[ext_resource path="res://gfx/enemies/holizard/walk/0010.png" type="Texture" id=43]
[ext_resource path="res://gfx/enemies/holizard/walk/0011.png" type="Texture" id=44]
[ext_resource path="res://gfx/enemies/holizard/walk/0012.png" type="Texture" id=45]
[ext_resource path="res://gfx/enemies/holizard/walk/0014.png" type="Texture" id=46]
[ext_resource path="res://gfx/enemies/holizard/walk/0015.png" type="Texture" id=47]
[ext_resource path="res://gfx/enemies/holizard/walk/0016.png" type="Texture" id=48]
[ext_resource path="res://gfx/enemies/holizard/walk/0017.png" type="Texture" id=49]
[ext_resource path="res://gfx/enemies/holizard/walk/0018.png" type="Texture" id=50]
[ext_resource path="res://gfx/enemies/holizard/walk/0019.png" type="Texture" id=51]
[ext_resource path="res://gfx/enemies/holizard/walk/0020.png" type="Texture" id=52]
[ext_resource path="res://gfx/enemies/holizard/walk/0021.png" type="Texture" id=53]
[ext_resource path="res://gfx/enemies/holizard/walk/0023.png" type="Texture" id=54]
[ext_resource path="res://gfx/enemies/holizard/walk/0022.png" type="Texture" id=55]
[ext_resource path="res://gfx/enemies/holizard/idle/0050.png" type="Texture" id=56]
[ext_resource path="res://gfx/enemies/holizard/idle/0051.png" type="Texture" id=57]
[ext_resource path="res://gfx/enemies/holizard/idle/0052.png" type="Texture" id=58]
[ext_resource path="res://gfx/enemies/holizard/idle/0053.png" type="Texture" id=59]
[ext_resource path="res://gfx/enemies/holizard/idle/0054.png" type="Texture" id=60]
[ext_resource path="res://gfx/enemies/holizard/idle/0055.png" type="Texture" id=61]
[ext_resource path="res://gfx/enemies/holizard/idle/0056.png" type="Texture" id=62]
[ext_resource path="res://gfx/enemies/holizard/idle/0057.png" type="Texture" id=63]
[ext_resource path="res://gfx/enemies/holizard/idle/0058.png" type="Texture" id=64]
[ext_resource path="res://src/SniperHolizard.gd" type="Script" id=65]
[ext_resource path="res://gfx/enemies/holizard/idle/0059.png" type="Texture" id=66]
[ext_resource path="res://gfx/enemies/holizard/idle/0060.png" type="Texture" id=67]
[ext_resource path="res://gfx/enemies/holizard/attack/0001.png" type="Texture" id=68]
[ext_resource path="res://gfx/enemies/holizard/idle/0004.png" type="Texture" id=69]
[ext_resource path="res://gfx/enemies/holizard/idle/0011.png" type="Texture" id=70]
[ext_resource path="res://gfx/enemies/holizard/idle/0012.png" type="Texture" id=71]
[ext_resource path="res://gfx/enemies/holizard/idle/0014.png" type="Texture" id=72]
[ext_resource path="res://gfx/enemies/holizard/idle/0013.png" type="Texture" id=73]
[ext_resource path="res://gfx/enemies/holizard/idle/0005.png" type="Texture" id=74]
[ext_resource path="res://gfx/enemies/holizard/idle/0006.png" type="Texture" id=75]
[ext_resource path="res://gfx/enemies/holizard/idle/0007.png" type="Texture" id=76]
[ext_resource path="res://gfx/enemies/holizard/idle/0008.png" type="Texture" id=77]
[ext_resource path="res://gfx/enemies/holizard/idle/0009.png" type="Texture" id=78]
[ext_resource path="res://gfx/enemies/holizard/idle/0010.png" type="Texture" id=79]
[ext_resource path="res://gfx/enemies/holizard/attack/0002.png" type="Texture" id=80]
[ext_resource path="res://gfx/enemies/holizard/walk/0002.png" type="Texture" id=81]
[ext_resource path="res://gfx/enemies/holizard/attack/0003.png" type="Texture" id=82]
[ext_resource path="res://sfx/holizard_idle2.wav" type="AudioStream" id=83]
[ext_resource path="res://gfx/enemies/holizard/attack/0005.png" type="Texture" id=84]
[ext_resource path="res://gfx/enemies/holizard/attack/0006.png" type="Texture" id=85]
[ext_resource path="res://gfx/enemies/holizard/attack/0007.png" type="Texture" id=86]
[ext_resource path="res://gfx/enemies/holizard/attack/0008.png" type="Texture" id=87]
[ext_resource path="res://gfx/enemies/holizard/attack/0009.png" type="Texture" id=88]
[ext_resource path="res://gfx/enemies/holizard/attack/0010.png" type="Texture" id=89]
[ext_resource path="res://gfx/enemies/holizard/idle/0003.png" type="Texture" id=90]
[ext_resource path="res://gfx/enemies/holizard/idle/0001.png" type="Texture" id=91]
[ext_resource path="res://gfx/enemies/holizard/idle/0002.png" type="Texture" id=92]
[ext_resource path="res://gfx/enemies/holizard/idle/0034.png" type="Texture" id=93]
[ext_resource path="res://gfx/enemies/holizard/idle/0035.png" type="Texture" id=94]
[ext_resource path="res://gfx/enemies/holizard/idle/0036.png" type="Texture" id=95]
[ext_resource path="res://gfx/enemies/holizard/idle/0037.png" type="Texture" id=96]
[ext_resource path="res://gfx/enemies/holizard/idle/0038.png" type="Texture" id=97]
[ext_resource path="res://gfx/enemies/holizard/idle/0039.png" type="Texture" id=98]
[ext_resource path="res://gfx/enemies/holizard/idle/0040.png" type="Texture" id=99]
[ext_resource path="res://gfx/enemies/holizard/idle/0041.png" type="Texture" id=100]
[ext_resource path="res://gfx/enemies/holizard/idle/0042.png" type="Texture" id=101]
[ext_resource path="res://gfx/enemies/holizard/idle/0043.png" type="Texture" id=102]
[ext_resource path="res://gfx/enemies/holizard/idle/0044.png" type="Texture" id=103]
[ext_resource path="res://gfx/enemies/holizard/idle/0045.png" type="Texture" id=104]
[ext_resource path="res://gfx/enemies/holizard/idle/0046.png" type="Texture" id=105]
[ext_resource path="res://gfx/enemies/holizard/idle/0047.png" type="Texture" id=106]
[ext_resource path="res://gfx/enemies/holizard/idle/0048.png" type="Texture" id=107]
[ext_resource path="res://gfx/enemies/holizard/idle/0049.png" type="Texture" id=108]
[ext_resource path="res://gfx/enemies/holizard/walk/0001.png" type="Texture" id=109]
[ext_resource path="res://gfx/enemies/holizard/walk/0024.png" type="Texture" id=110]
[ext_resource path="res://gfx/enemies/holizard/walk/0025.png" type="Texture" id=111]
[ext_resource path="res://gfx/enemies/holizard/walk/0013.png" type="Texture" id=112]
[ext_resource path="res://sfx/holizard_idle.wav" type="AudioStream" id=113]
[ext_resource path="res://sfx/holizard_pain.wav" type="AudioStream" id=114]
[ext_resource path="res://gfx/shadow512.png" type="Texture" id=115]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 91 ), ExtResource( 92 ), ExtResource( 90 ), ExtResource( 69 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 73 ), ExtResource( 72 ), ExtResource( 1 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 34 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 66 ), ExtResource( 67 ) ],
"loop": true,
"name": "idle",
"speed": 30.0
}, {
"frames": [ ExtResource( 68 ), ExtResource( 80 ), ExtResource( 82 ), ExtResource( 28 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "attack",
"speed": 30.0
}, {
"frames": [ ExtResource( 109 ), ExtResource( 81 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 112 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 55 ), ExtResource( 54 ), ExtResource( 110 ), ExtResource( 111 ) ],
"loop": true,
"name": "walk",
"speed": 60.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 18.722
height = 56.937

[sub_resource type="CircleShape2D" id=3]
radius = 448.445

[sub_resource type="CircleShape2D" id=4]
radius = 33.1326

[sub_resource type="CircleShape2D" id=5]
radius = 50.0

[node name="Holizard" type="KinematicBody2D" groups=[
"fragile",
"pushable",
]]
rotation = 0.15708
scale = Vector2( 1.2, 1.2 )
z_index = 10
script = ExtResource( 65 )

[node name="Shadow" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 115 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.39626
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "attack"
frame = 13
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -11.0638, 3.38237 )
rotation = 1.39626
shape = SubResource( 2 )

[node name="Sense" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sense"]
position = Vector2( 0.354061, -0.0560779 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="BoredTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleNoise0" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 113 )

[node name="IdleNoise1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 83 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 40, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2.37732, -6.0975 )
shape = SubResource( 4 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 40, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 2.37732, -6.0975 )
shape = SubResource( 5 )

[node name="PainNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 114 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Sense" to="." method="_on_Sense_body_entered"]
[connection signal="body_exited" from="Sense" to="." method="_on_Sense_body_exited"]
[connection signal="timeout" from="BoredTimer" to="." method="_on_BoredTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
